Fix grid layout quirks on mobiles

--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -127,7 +127,7 @@
   margin-left: -$spacing-unit / 2;
 
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: 7fr 4fr 9fr;
   column-gap: 5px;
 
   @extend %clearfix;
@@ -152,23 +152,17 @@
 }
 
 @include media-query($on-laptop) {
-  .footer-col-1,
-  .footer-col-2 {
-    width: -webkit-calc(50% - (#{$spacing-unit} / 2));
-    width:         calc(50% - (#{$spacing-unit} / 2));
-  }
-
-  .footer-col-3 {
-    width: -webkit-calc(100% - (#{$spacing-unit} / 2));
-    width:         calc(100% - (#{$spacing-unit} / 2));
+  .footer-col-wrapper {
+    grid-template-columns: 1fr 1fr 2fr;
   }
 }
 
 @include media-query($on-palm) {
   .footer-col {
     float: none;
-    width: -webkit-calc(100% - (#{$spacing-unit} / 2));
-    width:         calc(100% - (#{$spacing-unit} / 2));
+  }
+  .footer-col-wrapper {
+    grid-template-columns: 1fr 1fr 1fr;
   }
 }
 
